--- a/app/src/main/res/menu/bottom_nav.xml
+++ b/app/src/main/res/menu/bottom_nav.xml
@@ -1,8 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:title="Item" />
-    <item android:title="Item" />
-    <item android:title="Item" />
-    <item android:title="Item" />
+    <item android:title="Home"
+        android:icon="@drawable/ic_homeicon"
+        />
+    <item android:title="Search"
+        android:icon="@drawable/ic_searchicon"
+        />
+    <item android:title="Calendar"
+        android:icon="@drawable/ic_calendar"
+        />
+    <item android:title="Notification"
+        android:icon="@drawable/ic_notificationbell"
+        />
 </menu>
