--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    >
 
 
     <androidx.fragment.app.FragmentContainerView
@@ -27,5 +28,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/mainActivity_fragmentContainerView"
+        android:background="@color/white"
+        app:menu="@menu/bottom_nav"
         />
 </androidx.constraintlayout.widget.ConstraintLayout>
