--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -5,10 +5,12 @@
     android:layout_height="match_parent"
     tools:context=".features.calendar.CalendarFragment">
 
-    <!-- TODO: Update blank fragment layout -->
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:gravity="center_horizontal|center_vertical"
+        android:textSize="24sp"
+        android:text="@string/calender_fragment" />
 
 </FrameLayout>
