--- a/app/src/main/res/menu/bottom_nav.xml
+++ b/app/src/main/res/menu/bottom_nav.xml
@@ -1,16 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:title="Home"
+    <item
+        android:id="@+id/homeFragment"
         android:icon="@drawable/ic_homeicon"
         />
-    <item android:title="Search"
+    <item
+        android:id="@+id/searchFragment"
         android:icon="@drawable/ic_searchicon"
         />
-    <item android:title="Calendar"
+    <item
+        android:id="@+id/calendarFragment"
         android:icon="@drawable/ic_calendar"
         />
-    <item android:title="Notification"
+    <item
+        android:id="@+id/notificationFragment"
         android:icon="@drawable/ic_notificationbell"
         />
 </menu>
