--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="gradient_color1">#69FF97</color>
     <color name="gradient_color2">#00E4FF</color>
+    <color name="bg_view">#1D172B</color>
+    <color name="text_title">#25EDDA</color>
 </resources>
