--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -12,8 +12,6 @@
     tools:context=".features.home.HomeFragment"
     android:background="@drawable/gradient_bg"
     >
-
-
     <ImageView
         android:id="@+id/homeFragment_menu_icon_iv"
         android:layout_width="25dp"
@@ -63,11 +61,10 @@
         app:layout_constraintTop_toBottomOf="@id/homeFragment_question"
         app:shapeAppearance="@style/ShapeAppearance_custom_corners"
         >
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            >
-
+            android:layout_height="match_parent">
 
             <TextView
                 android:id="@+id/home_fragment_milongas"
@@ -106,6 +103,59 @@
                 android:textColor="@color/text_title"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/home_fragment_milongas_list_top_gdl"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                app:layout_constraintGuide_percent="0.18" />
+
+            <TextView
+                android:id="@+id/home_fragment_list_title_milongas_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/inter"
+                android:text="@string/home_fragment_list_title_milongas"
+                android:textColor="@color/info_title"
+                app:layout_constraintBottom_toTopOf="@id/home_fragment_milongas_list_top_gdl"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.094"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/home_fragment_milongas" />
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/home_fragment_milongas_list_bottom_gdl"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                app:layout_constraintGuide_percent="0.35" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/home_fragment_milongas_rv"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                app:layout_constraintTop_toBottomOf="@id/home_fragment_milongas_list_top_gdl"
+                app:layout_constraintBottom_toTopOf="@id/home_fragment_milongas_list_bottom_gdl"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                tools:layout_editor_absoluteX="1dp"
+                tools:layout_editor_absoluteY="1dp" />
+
+            <TextView
+                android:id="@+id/home_fragment_list_title_teachers_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:fontFamily="@font/inter"
+                android:text="@string/home_fragment_list_title_teachers"
+                android:textColor="@color/info_title"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.094"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/home_fragment_milongas_list_bottom_gdl" />
+
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </com.google.android.material.card.MaterialCardView>
