--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -146,7 +146,7 @@
                 android:id="@+id/home_fragment_list_title_teachers_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="4dp"
                 android:fontFamily="@font/inter"
                 android:text="@string/home_fragment_list_title_teachers"
                 android:textColor="@color/info_title"
@@ -154,6 +154,48 @@
                 app:layout_constraintHorizontal_bias="0.094"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/home_fragment_milongas_list_bottom_gdl" />
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/home_fragment_teachers_list_bottom_gdl"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                app:layout_constraintGuide_percent="0.65" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/home_fragment_teachers_rv"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/home_fragment_list_title_teachers_tv"
+                app:layout_constraintBottom_toTopOf="@id/home_fragment_teachers_list_bottom_gdl"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                tools:layout_editor_absoluteX="26dp"
+                tools:layout_editor_absoluteY="154dp" />
+
+            <TextView
+                android:id="@+id/home_fragment_list_title_events_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                android:fontFamily="@font/inter"
+                android:text="@string/home_fragment_list_title_events"
+                android:textColor="@color/info_title"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.073"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/home_fragment_teachers_list_bottom_gdl" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/home_fragment_events_rv"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                app:layout_constraintTop_toBottomOf="@id/home_fragment_list_title_events_tv"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                tools:layout_editor_absoluteX="55dp"
+                tools:layout_editor_absoluteY="368dp" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
