--- a/app/src/main/res/navigation/resource_nav_graph.xml
+++ b/app/src/main/res/navigation/resource_nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/homeFragment"
-        android:name="com.polish.resource.features.home.HomeFragment"
+        android:name="com.polish.resource.features.home.presentation.HomeFragment"
         android:label="fragment_home"
         tools:layout="@layout/fragment_home" />
     <fragment
