--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="homeFragment_title_greeting_txsz">22sp</dimen>
+    <dimen name="milongas_list_item_directions_tsx">12sp</dimen>
+    <dimen name="molingas_list_item_title_tsx">12sp</dimen>
 </resources>
