--- a/app/src/main/res/layout/milongas_list_item.xml
+++ b/app/src/main/res/layout/milongas_list_item.xml
@@ -3,18 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="280dp"
-    android:layout_marginEnd="32dp"
-    android:layout_marginTop="2dp"
-    android:layout_marginStart="2dp"
-    android:layout_marginBottom="2dp"
     app:cardCornerRadius="16dp"
     android:backgroundTint="@color/bg_view"
-    android:outlineAmbientShadowColor="@color/black"
-    android:outlineSpotShadowColor="@color/black"
+    android:layout_marginHorizontal="8dp"
     app:strokeColor="@color/black"
     app:strokeWidth="2dp"
     android:elevation="32dp"
-    android:layout_height="110dp">
+    android:layout_height="wrap_content">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
