--- a/app/src/main/res/layout/teachers_list_item.xml
+++ b/app/src/main/res/layout/teachers_list_item.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="150dp"
     android:layout_height="wrap_content"
+    android:layout_marginHorizontal="8dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     >
 
