--- a/app/src/main/res/layout/events_list_item.xml
+++ b/app/src/main/res/layout/events_list_item.xml
@@ -8,7 +8,8 @@
     app:strokeWidth="2dp"
     android:layout_marginHorizontal="8dp"
     app:cardCornerRadius="16dp"
-    android:elevation="16dp"
+    android:elevation="8dp"
+    app:cardElevation="8dp"
     android:backgroundTint="@color/bg_view"
     >
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -36,8 +37,10 @@
 
         <TextView
             android:id="@+id/events_list_item_event_date_tv"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:maxLines="1"
+            android:ellipsize="end"
             android:layout_marginTop="2dp"
             android:fontFamily="@font/inter"
             android:text="@string/events_list_item_event_date"
@@ -50,8 +53,10 @@
 
         <TextView
             android:id="@+id/events_list_item_event_name_tv"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:maxLines="1"
+            android:ellipsize="end"
             android:fontFamily="@font/inter_bold"
             android:text="@string/events_list_item_event_name"
             android:textColor="@color/white"
@@ -63,8 +68,10 @@
 
         <TextView
             android:id="@+id/events_list_item_event_location_tv"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:maxLines="1"
+            android:ellipsize="end"
             android:fontFamily="@font/inter"
             android:text="@string/events_list_item_event_location"
             android:textColor="@color/info_title"
