--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -13,4 +13,11 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+    <style name="Theme.App.Starting" parent="Theme.SplashScreen">
+        <item name="windowSplashScreenBackground">#202020</item>
+
+        <item name="windowSplashScreenAnimatedIcon">@drawable/presentation</item>
+
+        <item name="postSplashScreenTheme">@style/Theme.Resource</item>
+    </style>
 </resources>
