--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -24,4 +24,13 @@
         <item name="cornerSizeTopLeft">24dp</item>
         <item name="cornerSizeTopRight">24dp</item>
     </style>
+
+    <style name="Theme.App.Starting" parent="Theme.SplashScreen">
+        <item name="windowSplashScreenBackground">#202020</item>
+
+        <item name="windowSplashScreenAnimatedIcon">@drawable/presentation</item>
+
+        <item name="postSplashScreenTheme">@style/Theme.Resource</item>
+    </style>
+
 </resources>
